--- a/src/ru/avtomaty.html
+++ b/src/ru/avtomaty.html
@@ -17,12 +17,21 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-76167740-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-76167740-3');
+    </script>
     <!-- Facebook Pixel Code -->
     <script>
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -216,21 +225,22 @@
             <div class="col"></div>
             <div class="col-10">
                 <h5 class="text-center fw-bold"> <small>Кофемашины типа Автомат подходят для ресторанов, кафе, баров с
-                    барной стойкой контактной или
-                    бесконтактной.</small> </h5>
+                        барной стойкой контактной или
+                        бесконтактной.</small> </h5>
                 <ul>
                     <small>
                         <li>
-                            Работать на этом оборудовании менее сложно. Осуществляется автоматический проток воды. Это делает
-                             работу бариста гораздо проще.
+                            Работать на этом оборудовании менее сложно. Осуществляется автоматический проток воды. Это
+                            делает
+                            работу бариста гораздо проще.
                         </li>
                         <li>
                             С помощью автоматической дозировки удается существенно сэкономить время.
                         </li>
                         <li>
                             В процессе приготовления нет необходимости все время стоять у машины. Есть возможность
-                             параллельно
-                             заниматься другими неотложными делами.
+                            параллельно
+                            заниматься другими неотложными делами.
                         </li>
                         <li>
                             Удается гораздо быстрее научиться работе на устройстве автоматического типа.
@@ -264,7 +274,8 @@
                     <div class="card-body">
                         <h3 class="text-center">Bianchi Gaia Touch</h3>
                         <small>
-                            <p class="lh-sm">Автоматическая кофемашина для приготовления напитков на основе зернового кофе,
+                            <p class="lh-sm">Автоматическая кофемашина для приготовления напитков на основе зернового
+                                кофе,
                                 сухого молока, какао и кофейных миксов.</p>
                             <p class="lh-sm">7-дюймовый сенсорный экран вместо кнопок выбора с возможностью
                                 воспроизведение мультимедийного контента.</p>
@@ -305,7 +316,8 @@
                         <small>
                             <p class="lh-sm">Новая кофемашина, которая является лучшей в сегменте ХоРеКа.</p>
                             <p class="lh-sm">Дает возможность приготовления кофе и кофейных напитков в локациях с
-                                ограниченным пространством. При этом качество напитков не уступает лучшим образцам, которые были
+                                ограниченным пространством. При этом качество напитков не уступает лучшим образцам,
+                                которые были
                                 приготовлены на классических кофеварках.</p>
                             <p class="lh-sm">Приготовление напитков из зернового кофе и молока. От 15 чашек в день.</p>
                             <!-- <ul>
@@ -401,7 +413,7 @@
             <div class="col"></div>
             <div class="col-10">
                 <h5 class="text-center fw-bold"> <small>Кофемашины типа Суперавтомат часто можно увидеть в офисах
-                    разных фирм, салонах красоты, ресторанах быстрого питания и на заправках.</small> </h5>
+                        разных фирм, салонах красоты, ресторанах быстрого питания и на заправках.</small> </h5>
                 <ul>
                     <small>
                         <li>
@@ -448,8 +460,10 @@
                     <div class="card-body">
                         <h3 class="text-center">Franke FM800</h3>
                         <small>
-                            <p class="lh-sm">С появлением Franke Spectra FoamMaster 800 появилась возможность воплотить в
-                                реальность Ваши самые смелые мечты об идеальном кофейном напитке. Качество молочной пены и
+                            <p class="lh-sm">С появлением Franke Spectra FoamMaster 800 появилась возможность воплотить
+                                в
+                                реальность Ваши самые смелые мечты об идеальном кофейном напитке. Качество молочной пены
+                                и
                                 вкус эспрессо с помощью патентованных технологий FRANKE поражают воображение.</p>
                             <p class="lh-sm">Автоматическая подача пара.</p>
                             <p class="lh-sm">Подогрев чашек.</p>
@@ -457,7 +471,8 @@
                                 бутилированной водой).</p>
                             <p class="lh-sm">Электронное сенсорное управление, 10.4' панель по технологии планшета с
                                 интуитивным 4-разрядным режимом функционирования.</p>
-                            <p class="lh-sm">Уникальная революционная молочная система FoamMaster, интегрированная в машину.
+                            <p class="lh-sm">Уникальная революционная молочная система FoamMaster, интегрированная в
+                                машину.
                             </p>
                             <p class="lh-sm">Возможность установки до 3 кофемолок с керамическими ножами прямого
                                 помола.</p>
@@ -494,9 +509,11 @@
                     <div class="card-body">
                         <h3 class="text-center">WMF 1500S</h3>
                         <small>
-                            <p class="lh-sm">WMF 1500S может делать огромное количество различных напитков используя до 3
+                            <p class="lh-sm">WMF 1500S может делать огромное количество различных напитков используя до
+                                3
                                 бункеров – и все это при ширине в 32,5 см!</p>
-                            <p class="lh-sm">Помимо классических рецептов, WMF 1500S готовит идеальные летние напитки из холодного
+                            <p class="lh-sm">Помимо классических рецептов, WMF 1500S готовит идеальные летние напитки из
+                                холодного
                                 молока.</p>
                             <p class="lh-sm">Используется новый температурный датчик, который в 4 раза быстрее. Это
                                 приводит к более быстрой работе нагревательной системы, а значит и лучшей консистенции
@@ -540,7 +557,8 @@
                                 обслуживание и загрузки ингредиентов.</p>
                             <p class="lh-sm">Запатентованная технология для максимального энергосбережения обеспечивает
                                 высокую производительность и понижение энергопотребления.</p>
-                            <p class="lh-sm">Гибкие конфигурации машины способствуют высокой производительности и широкому
+                            <p class="lh-sm">Гибкие конфигурации машины способствуют высокой производительности и
+                                широкому
                                 выбора напитков.</p>
                             <p class="lh-sm">Быстрая автоматическая чистка.</p>
                             <!-- <ul>
@@ -575,7 +593,7 @@
                     <div class="col-4 p-4 offset-md-1">
                         <h6>ХОРЕКА</h6>
                         <p class="footer-left">
-                           Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
+                            Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
                             Черкассы
                         </p>
                         <div class="row">
