--- a/src/ru/dlya_cafe_restoranov.html
+++ b/src/ru/dlya_cafe_restoranov.html
@@ -17,6 +17,15 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-76167740-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-76167740-3');
+    </script>
     <!-- Facebook Pixel Code -->
     <script>
         !function (f, b, e, v, n, t, s) {
@@ -228,7 +237,8 @@
                         <img src="../img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
                             <h5 class="fw-bold">Оборудование в аренду</h5>
-                            <p class="card-text main-text-size">Мы предоставляем в аренду широкий выбор кофейного оборудования.
+                            <p class="card-text main-text-size">Мы предоставляем в аренду широкий выбор кофейного
+                                оборудования.
                                 Як <a href="./avtomaty.html">Суперавтоматы</a> с сенсорным экраном, так и <a
                                     href="./postovie.html">Классические</a> постовые кофемашины в паре с
                                 профессиональной <a href="./kofemolki.html">Кофемолкой</a>.</p>
@@ -240,7 +250,8 @@
                         <img src="../img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
                             <h5 class="fw-bold">Широкий ассортимент <br> продуков</h5>
-                            <p class="card-text main-text-size">Мы предлагаем вам не только качественный кофе и составляющие, но и
+                            <p class="card-text main-text-size">Мы предлагаем вам не только качественный кофе и
+                                составляющие, но и
                                 сопутствующие товары:
                                 сиропы, стаканы, сахар, мешалки, а также большой выбор барной атрибутики.</p>
                         </div>
@@ -284,7 +295,8 @@
                     <h5 class="green text-center">Преимущества сотрудничества с нами</h5>
                     <ul class="main-text-size">
                         <li>Мы предоставляем в аренду оборудование итальянского производителя.</li>
-                        <li>Специалисты компании регулярно посещают наших клиентов, предлагая полный спектр сервисного обслуживания,
+                        <li>Специалисты компании регулярно посещают наших клиентов, предлагая полный спектр сервисного
+                            обслуживания,
                             от мелкого планового ремонта на месте, до капитального ремонта на
                             территории
                             нашей мастерской.</li>
@@ -316,7 +328,7 @@
                             <p class="lh-sm text-muted">
                                 <small>
                                     Оставьте заявку на нашем сайте по телефону или
-                                     с помощью электронной почты.
+                                    с помощью электронной почты.
                                 </small>
                             </p>
                         </div>
