--- a/src/ru/dlya_magazinov_i_setey.html
+++ b/src/ru/dlya_magazinov_i_setey.html
@@ -17,6 +17,15 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-76167740-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-76167740-3');
+    </script>
     <!-- Facebook Pixel Code -->
     <script>
         !function (f, b, e, v, n, t, s) {
@@ -239,7 +248,8 @@
                         <div class="card-body">
                             <h5 class="fw-bold">Установка кофемашин в течение одних суток <span class="select">
                                     *</span></h5>
-                            <p class="card-text main-text-size">После согласования всех вопросов, установка осуществляется
+                            <p class="card-text main-text-size">После согласования всех вопросов, установка
+                                осуществляется
                                 в максимально
                                 сжатые сроки.
                                 <br> <br> <span class="select">* </span> В зависимости от расстояния
@@ -272,9 +282,11 @@
                 <p class="p-4 magazine indent main-text-size">Выпить вкусный кофе сейчас можно не только в кафе, но
                     и в магазинах, как
                     великих, так і маленьких. Предлагаем вам установить кофейное оборудование в вашей торговой сети на
-                    выгодных условиях Только представьте, как аромат свежемолотого кофе встречает ваших клиентов и побуждает
+                    выгодных условиях Только представьте, как аромат свежемолотого кофе встречает ваших клиентов и
+                    побуждает
                     возвращаться за стаканчиком любимого напитка снова и снова.
-                    Выбор кофейного оборудования зависит от размера заведения и его статусности, проходимости людей. Наши
+                    Выбор кофейного оборудования зависит от размера заведения и его статусности, проходимости людей.
+                    Наши
                     менеджеры подберут самый выгодный вариант именно для Вас, учитывая все нюансы и пожелания.</p>
             </div>
         </div>
@@ -287,10 +299,12 @@
                     <ul class="main-text-size">
                         <li>Мы предлагаем широкий ассортимент оборудования для торговых сетей и магазинов.
                             бесплатно, под выполение плана реализации кофе.</li>
-                        <li>Рецептура напитков тщательно продумана, чтобы вы получили максимум вкуса из рационального расхода
+                        <li>Рецептура напитков тщательно продумана, чтобы вы получили максимум вкуса из рационального
+                            расхода
                             продукта.</li>
                         <li>Мы бесплатно обеспечиваем полное сервисное сопровождение кофемашины.</li>
-                        <li>Наши специалисты проведут мастер-класс для ваших сотрудников по работе с выбранной кофеваркой.
+                        <li>Наши специалисты проведут мастер-класс для ваших сотрудников по работе с выбранной
+                            кофеваркой.
                         </li>
                         <li>Снабжаем рекламной продукцией, которая привлечет в ваш магазин еще больше клиентов.</li>
                     </ul>
@@ -445,7 +459,8 @@
         <h4 class="pb-2 text-center">3. Получите себестоимость напитков для выбранного типа кофемашины<span
                 class="select">* **</span></h4>
         <h6 class="pb-2"><span class="select">* </span>Не учитывается стоимость воды и мешалки.</h6>
-        <h6 class="pb-2"><span class="select">** </span>Указанные рецептуры напитков являются <b>базовыми</b> для вибранного типа
+        <h6 class="pb-2"><span class="select">** </span>Указанные рецептуры напитков являются <b>базовыми</b> для
+            вибранного типа
             кофемашины и <b>могут быть изменены</b> по требованию заказчика.</h6>
         <div class="accordion calc_receipts collapse show p-2 pb-4" id="accordionBianchiGaia">
             <div class="row">
@@ -574,7 +589,8 @@
                         </h2>
                         <div id="Gaia-collapseSix" class="accordion-collapse collapse" aria-labelledby="Gaia-headingSix"
                             data-bs-parent="#accordionBianchiGaia">
-                            <div class="accordion-body">Состав: Кофе (зерно) - 7,7г; Сухая молочная смесь- 10г; Сахар - 8г;
+                            <div class="accordion-body">Состав: Кофе (зерно) - 7,7г; Сухая молочная смесь- 10г; Сахар -
+                                8г;
                                 Стакан 180 мл - 1шт.;
                                 Вода - 150мл</div>
                         </div>
@@ -749,7 +765,8 @@
                         </h2>
                         <div id="Talia-collapseSix" class="accordion-collapse collapse"
                             aria-labelledby="Talia-headingSix" data-bs-parent="#accordionBianchiTalia">
-                            <div class="accordion-body">Состав: Кофе (зерно) - 8,6г; Сухая молочная смесь - 14г; Сахар - 8г;
+                            <div class="accordion-body">Состав: Кофе (зерно) - 8,6г; Сухая молочная смесь - 14г; Сахар -
+                                8г;
                                 Стакан 180 мл - 1шт.;
                                 Вода - 150мл</div>
                         </div>
@@ -792,7 +809,8 @@
                         </h2>
                         <div id="Talia-collapseEight" class="accordion-collapse collapse"
                             aria-labelledby="Talia-headingEight" data-bs-parent="#accordionBianchiTalia">
-                            <div class="accordion-body">Состав: Капучино Ирладский Виски - 18г; Сухая молочная смесь - 10г;
+                            <div class="accordion-body">Состав: Капучино Ирладский Виски - 18г; Сухая молочная смесь -
+                                10г;
                                 Стакан 180 мл - 1шт.; Вода - 150мл</div>
                         </div>
                     </div>
@@ -815,7 +833,8 @@
                         </h2>
                         <div id="Talia-collapseNine" class="accordion-collapse collapse"
                             aria-labelledby="Talia-headingNine" data-bs-parent="#accordionBianchiTalia">
-                            <div class="accordion-body">Состав: Кофе (зерно) - 8,6г; Сухая молочная смесь - 10г; Капучино
+                            <div class="accordion-body">Состав: Кофе (зерно) - 8,6г; Сухая молочная смесь - 10г;
+                                Капучино
                                 Айриш Виски - 10г; Сахар - 4г; Стакан 180 мл - 1шт.;
                                 Вода - 150мл</div>
                         </div>
@@ -859,7 +878,8 @@
                         </h2>
                         <div id="Talia-collapseEleven" class="accordion-collapse collapse"
                             aria-labelledby="Talia-headingEleven" data-bs-parent="#accordionBianchiTalia">
-                            <div class="accordion-body">Состав: Капучино Айриш Виски (Крема Каталана) - 10г; Сухая молочная
+                            <div class="accordion-body">Состав: Капучино Айриш Виски (Крема Каталана) - 10г; Сухая
+                                молочная
                                 смесь - 10г; Стакан 180 мл - 1шт.; Вода -
                                 150мл</div>
                         </div>
@@ -902,7 +922,8 @@
                         </h2>
                         <div id="Talia-collapseThirteen" class="accordion-collapse collapse"
                             aria-labelledby="Talia-headingThirteen" data-bs-parent="#accordionBianchiTalia">
-                            <div class="accordion-body">Состав: Кофе (зерно) - 8,6г; Сухая молочная смесь - 7г; Сахар - 8г;
+                            <div class="accordion-body">Состав: Кофе (зерно) - 8,6г; Сухая молочная смесь - 7г; Сахар -
+                                8г;
                                 Стакан 180 мл - 1шт.; Вода - 110мл</div>
                         </div>
                     </div>
@@ -1080,7 +1101,8 @@
                         </h2>
                         <div id="Koro-collapseSix" class="accordion-collapse collapse" aria-labelledby="Koro-headingSix"
                             data-bs-parent="#accordionNectaKoro">
-                            <div class="accordion-body">Состав: Кава (зерно) - 9г; Сухая молочная смесь - 16г; Сахар - 12г;
+                            <div class="accordion-body">Состав: Кава (зерно) - 9г; Сухая молочная смесь - 16г; Сахар -
+                                12г;
                                 Стакан 340 мл - 1шт.;
                                 Вода - 270мл</div>
                         </div>
@@ -1102,7 +1124,8 @@
                         </h2>
                         <div id="Koro-collapseSeven" class="accordion-collapse collapse"
                             aria-labelledby="Koro-headingSeven" data-bs-parent="#accordionNectaKoro">
-                            <div class="accordion-body">Состав: Кофе (зерно) - 9г; Сухая молочная смесь - 7г; Сахар - 8г;
+                            <div class="accordion-body">Состав: Кофе (зерно) - 9г; Сухая молочная смесь - 7г; Сахар -
+                                8г;
                                 Стакан 180 мл - 1шт.;
                                 Вода - 150мл</div>
                         </div>
@@ -1124,7 +1147,8 @@
                         </h2>
                         <div id="Koro-collapseEight" class="accordion-collapse collapse"
                             aria-labelledby="Koro-headingEight" data-bs-parent="#accordionNectaKoro">
-                            <div class="accordion-body">Состав: Кофе (зерно) - 9г; Сухая молочная смесь - 5г; Сахар - 4г;
+                            <div class="accordion-body">Состав: Кофе (зерно) - 9г; Сухая молочная смесь - 5г; Сахар -
+                                4г;
                                 Стакан 180 мл - 1шт.;
                                 Вода - 50мл</div>
                         </div>
