--- a/src/ru/index.html
+++ b/src/ru/index.html
@@ -17,6 +17,15 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Roboto:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-76167740-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-76167740-3');
+    </script>
     <!-- Facebook Pixel Code -->
     <script>
         !function (f, b, e, v, n, t, s) {
@@ -224,9 +233,12 @@
                 <div class="col">
                     <h1 class="green text-center">О КОМПАНИИ</h1>
                     <p class="indent">
-                        Мы — команда профессионалов, которая работает на кофейном рынке Украины с 2005 года. За это время мы
-                        получили большой опыт в организации сервиса горячих напитков. Наша деятельность помогает партнерам
-                        удовлетворить потребности своих клиентов в этом направлении. Разработанные нами оригинальные рецепты
+                        Мы — команда профессионалов, которая работает на кофейном рынке Украины с 2005 года. За это
+                        время мы
+                        получили большой опыт в организации сервиса горячих напитков. Наша деятельность помогает
+                        партнерам
+                        удовлетворить потребности своих клиентов в этом направлении. Разработанные нами оригинальные
+                        рецепты
                         узнаваемы потребителями благодаря новейшим вкусам и оформлению напитков.
                     </p>
                     <ul>
@@ -235,7 +247,8 @@
                         <li>В 24 регионах Украины заметно наше присутствие (благодаря вендинговой сети).</li>
                         <li>16 лет присутствия на рынке дает возможность удовлетворить любые потребности наших партнеров
                             по всей территории Украины.</li>
-                        <li>Специалисты компании регулярно посещают наших клиентов, предлагая полный спектр сервисного обслуживания
+                        <li>Специалисты компании регулярно посещают наших клиентов, предлагая полный спектр сервисного
+                            обслуживания
                             обслуживание, от мелкого планового ремонта на месте, до капитального ремонта на
                             территории нашей мастерской.</li>
                         <li>Мы гарантируем максимально возможную прибыль при работе с нашими продуктами.</li>
@@ -263,7 +276,8 @@
             </div>
             <div class="col-lg-4 p-1">
                 <div class="image">
-                    <a href="./vending.html"><img src="../img/index/vending.webp" class="card-img-top" alt="vending"></a>
+                    <a href="./vending.html"><img src="../img/index/vending.webp" class="card-img-top"
+                            alt="vending"></a>
                     <div class="bottom-left">ВЕНДИНГ</div>
                 </div>
             </div>
@@ -437,7 +451,7 @@
                     <div class="col-4 p-4 offset-md-1">
                         <h6>ХОРЕКА</h6>
                         <p class="footer-left">
-                           Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
+                            Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
                             Черкассы
                         </p>
                         <div class="row">
