--- a/src/ru/kofemolki.html
+++ b/src/ru/kofemolki.html
@@ -16,12 +16,21 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-76167740-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-76167740-3');
+    </script>
     <!-- Facebook Pixel Code -->
     <script>
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -215,7 +224,7 @@
             <div class="col"></div>
             <div class="col-10">
                 <h5 class="text-center fw-bold"> <small>Кофемолка — это второе главное устройство в кафе рядом с
-                    кофеваркой. От ее качества и надежности зависит то, насколько вкусным будет эспрессо.</small>
+                        кофеваркой. От ее качества и надежности зависит то, насколько вкусным будет эспрессо.</small>
                 </h5>
                 <ul>
                     <small>
@@ -275,7 +284,8 @@
                                 для обеспечения максимальной эффективности и практичности.</p>
                             <p class="lh-sm">Непрерывная микрометрическая регулировка помола с дозатором.</p>
                             <p class="lh-sm">Плоские жернова диаметром 64 мм.</p>
-                            <p class="lh-sm">Отсутствие бункера для смолотого кофе и автоматический режим помола заданного
+                            <p class="lh-sm">Отсутствие бункера для смолотого кофе и автоматический режим помола
+                                заданного
                                 количества порций прямо в холдер.</p>
                             <p class="lh-sm">Fiorenzato идеально подходит для большого коммерческого использования.</p>
                         </small>
@@ -310,7 +320,8 @@
                         <h3 class="text-center">Eureka Zenith 65E</h3>
                         <small>
                             <p class="lh-sm indent">Кофемолка Eureka Zenith 65E сочетает в себе простоту использования и
-                                стиль потребительской модели с высокой производительностью, стабильностью и долговечностью.</p>
+                                стиль потребительской модели с высокой производительностью, стабильностью и
+                                долговечностью.</p>
                             <p class="lh-sm">Массивные плоские жернова диаметром 65 мм, создают стабильный и равномерный
                                 помол без комков.</p>
                             <p class="lh-sm">Эксклюзивная тончайшая регулировка помола.</p>
@@ -340,7 +351,7 @@
                     <div class="col-4 p-4 offset-md-1">
                         <h6>ХОРЕКА</h6>
                         <p class="footer-left">
-                           Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
+                            Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
                             Черкассы
                         </p>
                         <div class="row">
