--- a/src/ru/moloko_shokolad.html
+++ b/src/ru/moloko_shokolad.html
@@ -17,12 +17,21 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-76167740-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-76167740-3');
+    </script>
     <!-- Facebook Pixel Code -->
     <script>
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -216,7 +225,7 @@
             <div class="col"></div>
             <div class="col-10">
                 <h5 class="text-center fw-bold"> <small>Готовые растворимые смеси могут значительно разнообразить меню
-                    кофемашины как в чистом виде, так и в миксе с кофе.</small> </h5>
+                        кофемашины как в чистом виде, так и в миксе с кофе.</small> </h5>
                 <ul>
                     <small>
                         <li>
@@ -251,7 +260,8 @@
                         <h3 class="text-center">Сухая молочная смесь "Bianchi Professional"</h3>
                         <small>
                             <p class="lh-sm"><b>Milk Topping та Creamer</b> идеально подходят для приготовления кофейных
-                                напитков. Молочная смесь поражает своей кремовой пеной и мягким вкусом. Подходит для всех
+                                напитков. Молочная смесь поражает своей кремовой пеной и мягким вкусом. Подходит для
+                                всех
                                 типов кофемашин, работающих с использованием сухого молока.</p>
                         </small>
                     </div>
@@ -294,8 +304,10 @@
                     <div class="card-body">
                         <h3 class="text-center">Капучино Bianchi Ирландский Виски</h3>
                         <small>
-                            <p class="lh-sm">Мягко раскрывающийся на молочной основе напиток. Игривое настроение добавляет
-                                лесной орех, который верхними нотами напоминает тот самый напиток, в честь которого и название. А
+                            <p class="lh-sm">Мягко раскрывающийся на молочной основе напиток. Игривое настроение
+                                добавляет
+                                лесной орех, который верхними нотами напоминает тот самый напиток, в честь которого и
+                                название. А
                                 сладкая конфета завершает композицию шоколадным вкусом.</p>
                         </small>
                     </div>
@@ -403,7 +415,7 @@
                     <div class="col-4 p-4 offset-md-1">
                         <h6>ХОРЕКА</h6>
                         <p class="footer-left">
-                           Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
+                            Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
                             Черкассы
                         </p>
                         <div class="row">
