--- a/src/ru/postovie.html
+++ b/src/ru/postovie.html
@@ -17,12 +17,21 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-76167740-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-76167740-3');
+    </script>
     <!-- Facebook Pixel Code -->
     <script>
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -216,8 +225,8 @@
             <div class="col"></div>
             <div class="col-10">
                 <h5 class="text-center fw-bold"> <small>Классические постовые кофемашины несомненно относятся к
-                    профессионального оборудования для приготовления кофе. Используются в кафе, барах, кофетериях,
-                    ресторанах. Истинный инструмент настоящих барист.</small> </h5>
+                        профессионального оборудования для приготовления кофе. Используются в кафе, барах, кофетериях,
+                        ресторанах. Истинный инструмент настоящих барист.</small> </h5>
                 <ul>
                     <small>
                         <li>
@@ -278,7 +287,7 @@
                     <div class="col-4 p-4 offset-md-1">
                         <h6>ХОРЕКА</h6>
                         <p class="footer-left">
-                           Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
+                            Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
                             Черкассы
                         </p>
                         <div class="row">
