--- a/src/ru/syropi.html
+++ b/src/ru/syropi.html
@@ -16,12 +16,21 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-76167740-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-76167740-3');
+    </script>
     <!-- Facebook Pixel Code -->
     <script>
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -215,7 +224,7 @@
             <div class="col"></div>
             <div class="col-10">
                 <h5 class="text-center fw-bold"> <small>Вкус свежесваренного натурального кофе самодостаточный, но даже
-                    ярые поклонники классического варианта иногда желают разнообразить вкус напитка.</small> </h5>
+                        ярые поклонники классического варианта иногда желают разнообразить вкус напитка.</small> </h5>
                 <ul>
                     <small>
                         <li>
@@ -498,9 +507,11 @@
                     <div class="card-body">
                         <h3 class="text-center">Сироп "Имбирный пряник"</h3>
                         <small>
-                            <p class="lh-sm">Этот сироп ассоциируется с новогодними праздниками, горячим какао и пушистым
+                            <p class="lh-sm">Этот сироп ассоциируется с новогодними праздниками, горячим какао и
+                                пушистым
                                 снегом.</p>
-                            <p class="lh-sm">Его невероятный пряный аромат и вкус имбирного печенья прекрасно сочетается с
+                            <p class="lh-sm">Его невероятный пряный аромат и вкус имбирного печенья прекрасно сочетается
+                                с
                                 кофейными напитками и мороженым.</p>
                         </small>
                     </div>
@@ -614,7 +625,8 @@
                     <div class="card-body">
                         <h3 class="text-center">Сироп "Макадамский орех"</h3>
                         <small>
-                            <p class="lh-sm">Благородный вкус самого дорогого ореха с неповторимыми шоколадными нотками и
+                            <p class="lh-sm">Благородный вкус самого дорогого ореха с неповторимыми шоколадными нотками
+                                и
                                 мягким обволакивающим ароматом.</p>
                             <p class="lh-sm">Прекрасно сочетается с кофейными напитками, десертами, мороженым и
                                 коктейлями.</p>
@@ -681,7 +693,8 @@
                     <div class="card-body">
                         <h3 class="text-center">Сироп "Мята"</h3>
                         <small>
-                            <p class="lh-sm">Этот сироп имеет тонкий аромат и придает напиткам и десертам легкий холодок и
+                            <p class="lh-sm">Этот сироп имеет тонкий аромат и придает напиткам и десертам легкий холодок
+                                и
                                 свежесть.</p>
                         </small>
                     </div>
@@ -706,8 +719,10 @@
                     <div class="card-body">
                         <h3 class="text-center">Сироп "Мохито"</h3>
                         <small>
-                            <p class="lh-sm">Всем известен популярный сироп, напоминающий одноименный напиток. Он объединяет
-                                в себе сладость тростникового сахара, приятную кислинку лайма и прохладную свежесть мяты.
+                            <p class="lh-sm">Всем известен популярный сироп, напоминающий одноименный напиток. Он
+                                объединяет
+                                в себе сладость тростникового сахара, приятную кислинку лайма и прохладную свежесть
+                                мяты.
                             </p>
                         </small>
                     </div>
@@ -863,7 +878,8 @@
                         <h3 class="text-center">Сироп "Ваниль"</h3>
                         <small>
                             <p class="lh-sm">Ваниль-королевая пряностей. Ее волшебный аромат подчеркивает вкус выпечки,
-                                напитков, мороженого. Обязательно попробуйте кофе Глясе в сочетании с ванильным сиропом.</p>
+                                напитков, мороженого. Обязательно попробуйте кофе Глясе в сочетании с ванильным сиропом.
+                            </p>
                         </small>
                     </div>
                 </div>
@@ -926,7 +942,7 @@
                     <div class="col-4 p-4 offset-md-1">
                         <h6>ХОРЕКА</h6>
                         <p class="footer-left">
-                           Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
+                            Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
                             Черкассы
                         </p>
                         <div class="row">
