--- a/src/ru/vending.html
+++ b/src/ru/vending.html
@@ -16,12 +16,21 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-76167740-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-76167740-3');
+    </script>
     <!-- Facebook Pixel Code -->
     <script>
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -225,7 +234,8 @@
                         <div class="card-body">
                             <h5 class="fw-bold">Установка кофемашин в течение одних суток <span class="select">
                                     *</span></h5>
-                            <p class="card-text">После согласования всех вопросов, установка осуществляется в максимально
+                            <p class="card-text">После согласования всех вопросов, установка осуществляется в
+                                максимально
                                 сжатые сроки.
                                 <br> <br> <span class="select">* </span> В зависимости от города установки.
                             </p>
@@ -238,7 +248,8 @@
                         <div class="card-body">
                             <h5 class="fw-bold">Кофейные аппараты европейского качества <br> и доставка</h5>
                             <p class="card-text">Мы используем кофемашины известного производителя в мире торговых
-                                аппаратов Bianchi (Италия), выпускающего качественные, надежные, экономичные и удобные в работе
+                                аппаратов Bianchi (Италия), выпускающего качественные, надежные, экономичные и удобные в
+                                работе
                                 модели.
                             </p>
                         </div>
@@ -269,11 +280,12 @@
             <div class="col-lg-6">
                 <p class="p-4 magazine indent">Сложно вообразить жизнь любой современной компании без аромата кофе.
                     Наиболее
-                    удобный и выгодный способ повысить комфорт и эффективность работы ваших сотрудников - 
+                    удобный и выгодный способ повысить комфорт и эффективность работы ваших сотрудников -
                     установка кофейных автоматов в вашем офисе, на предприятии или в торговом/бизнес центре,
                     магазине, начальном заведении.
                     Предлагаем установку и обслуживание кофейного оборудования премиум-класса (производитель – Италия).
-                    Аппараты готовят качественный зерновой кофе от лидеров европейского рынка и разнообразные кофейные напитки
+                    Аппараты готовят качественный зерновой кофе от лидеров европейского рынка и разнообразные кофейные
+                    напитки
                     - Cappuccino Crema Catalana, Cappuccino Irish Whiskey, горячий шоколад, чай.</p>
             </div>
         </div>
@@ -292,7 +304,8 @@
                         <li>Бесплатная линия для клиентов.</li>
                         <li>Возможность оплачивать напитки банковской картой с помощью мобильного приложения.</li>
                         <li>Современный дизайн и простота использования оборудования.</li>
-                        <li>До возможного минимума сокращаются перерывы на кофе. Время приготовления напитка не более нескольких
+                        <li>До возможного минимума сокращаются перерывы на кофе. Время приготовления напитка не более
+                            нескольких
                             минут.</li>
                         <li>Растет производительность труда – свежий кофе не дает сотрудникам спать на рабочем месте.
                         </li>
@@ -331,8 +344,8 @@
                             <h5>Подтверждение</h5>
                             <p class="lh-sm text-muted">
                                 <small>
-                                    Наш специалист свяжется с Вами для определения места установки кофейного аппарата<span
-                                        class="select">*</span>
+                                    Наш специалист свяжется с Вами для определения места установки кофейного
+                                    аппарата<span class="select">*</span>
                                 </small>
                             </p>
                         </div>
@@ -369,7 +382,8 @@
     <div class="container">
         <p>
             <small>
-                <span class="select">* </span> Для установки необходимо: 1 кв.метр свободной площади, электрическая розетка
+                <span class="select">* </span> Для установки необходимо: 1 кв.метр свободной площади, электрическая
+                розетка
                 220 вольт.
             </small>
         </p>
@@ -430,7 +444,8 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <p class="card-text lh-sm indent">Наши вендинговые аппараты оборудованы системой оплаты банковской картой
+                <p class="card-text lh-sm indent">Наши вендинговые аппараты оборудованы системой оплаты банковской
+                    картой
                     с помощью
                     мобильного приложения ProstoPay, а также Googl Pay, Apple Pay, NFC</p>
                 <img src="../img/vending/oplata.webp" class="p-3 img-fluid" alt="pay">
@@ -534,7 +549,7 @@
                     <div class="col-4 p-4 offset-md-1">
                         <h6>ХОРЕКА</h6>
                         <p class="footer-left">
-                           Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
+                            Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
                             Черкассы
                         </p>
                         <div class="row">
