--- a/src/ru/zernovoy_kofe.html
+++ b/src/ru/zernovoy_kofe.html
@@ -16,12 +16,21 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-76167740-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-76167740-3');
+    </script>
     <!-- Facebook Pixel Code -->
     <script>
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -215,7 +224,7 @@
             <div class="col"></div>
             <div class="col-10">
                 <h5 class="text-center fw-bold"> <small>Кофе крепко вошел в нашу жизнь. Многие просто не мыслят
-                    утро без чашечки ароматного напитка. А ведь действительно — она помогает проснуться даже в самую
+                        утро без чашечки ароматного напитка. А ведь действительно — она помогает проснуться даже в самую
                         хмурую погоду.</small> </h5>
                 <ul>
                     <small>
@@ -274,7 +283,8 @@
                     <div class="card-body">
                         <h3 class="text-center">Кофе в зернах Bianchi #1 Beans Blend</h3>
                         <small>
-                            <p class="lh-sm">Bianchi #1 — отличный вариант для утреннего кофе. Крепкий, с запахом темного
+                            <p class="lh-sm">Bianchi #1 — отличный вариант для утреннего кофе. Крепкий, с запахом
+                                темного
                                 шоколада. Горьковатый, с деликатной кислинкой вкус, с легкими "жареными" нотками.</p>
                         </small>
                     </div>
@@ -350,7 +360,7 @@
                     <div class="col-4 p-4 offset-md-1">
                         <h6>ХОРЕКА</h6>
                         <p class="footer-left">
-                           Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
+                            Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
                             Черкассы
                         </p>
                         <div class="row">
