--- a/src/vending_avtomaty.html
+++ b/src/vending_avtomaty.html
@@ -16,12 +16,21 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-76167740-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-76167740-3');
+    </script>
     <!-- Facebook Pixel Code -->
     <script>
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -266,7 +275,7 @@
                             <p class="lh-sm">Панель выбору з великими,
                                 інтуїтивними кнопками з підсвічуванням,обладнана інноваційною технологією STT-Soft Touch
                                 Technology (технологія легкого натискання), яка розпізнає людський дотик. Ця технологія
-                                застосовується ексклюзивно в вендінг машинах Bianchi Industry.</p> 
+                                застосовується ексклюзивно в вендінг машинах Bianchi Industry.</p>
                             <p class="lh-sm">Можливість
                                 індивідуального вибору дозування цукру.</p>
                         </small>
@@ -296,7 +305,7 @@
                         <h3 class="text-center">Bianchi LEI 600 Smart</h3>
                         <small>
                             <p class="lh-sm">Автоматична вендінг-машина для приготування гарячих напоїв місткістю
-                                600 чашок на 24 напої з сенсорною панеллю вибору напоїв.</p> 
+                                600 чашок на 24 напої з сенсорною панеллю вибору напоїв.</p>
                             <p class="lh-sm">Обладнана системою
                                 автоматичного регулювання помолу кави, що гарантує найвищу якість напоїв.</p>
                         </small>
@@ -326,7 +335,7 @@
                         <h3 class="text-center">Bianchi LEI 600 Touch</h3>
                         <small>
                             <p class="lh-sm">Вендінговий кавовий автомат місткістю 600 чашок на 30 напоїв з
-                                інтерактивною сенсорною панеллю вибору напоїв.</p> 
+                                інтерактивною сенсорною панеллю вибору напоїв.</p>
                             <p class="lh-sm">У меню апарату входять кілька типів
                                 кавових напоїв на основі зернової кави, шоколаду, розчинних кавових інгредієнтів а також
                                 чай.</p>
@@ -362,7 +371,7 @@
                                 місцях з наявністю численних клієнтів, що вживають каву і напої на його основі: офісних
                                 центрах, будинках міської адміністрації, великих торгових залах, а також у адмінкорпусах
                                 великих виробничих об'єднань. </p>
-                                <p class="lh-sm">Можливість індивідуального вибору дозування цукру.</p>
+                            <p class="lh-sm">Можливість індивідуального вибору дозування цукру.</p>
                         </small>
                     </div>
                 </div>
@@ -428,8 +437,10 @@
                                 холодних напоїв. </p>
                             <p class="lh-sm">Він має 24 кнопки прямого вибору напоїв в стандартній і тактильній STT
                                 панелі. </p>
-                            <p class="lh-sm">Збільшений бункер для зернової кави і два контейнери для розчинної кави. </p>
-                            <p class="lh-sm">Вендінговий кавовий автомат Bianchi Lei 500 призначений для роботи в місцях з середньою
+                            <p class="lh-sm">Збільшений бункер для зернової кави і два контейнери для розчинної кави.
+                            </p>
+                            <p class="lh-sm">Вендінговий кавовий автомат Bianchi Lei 500 призначений для роботи в місцях
+                                з середньою
                                 і великою прохідністю.</p>
                         </small>
                     </div>
@@ -460,7 +471,7 @@
                                 концерном N&W (Necta&Wittenborg). </p>
                             <p class="lh-sm">Обладнаний сенсорним інтерактивним екраном. </p>
                             <p class="lh-sm">Дозволяє
-                                готувати до 12-ти видів напоїв.</p> 
+                                готувати до 12-ти видів напоїв.</p>
                             <p class="lh-sm">В апарат завантажуються два види стаканів для напоїв
                                 різного об'єму. </p>
                             <p class="lh-sm">Дизайн виділяє автомати Wittenborg 7600 в загальній масі автоматів, що
@@ -554,7 +565,8 @@
                     <div class="col-4 p-4 offset-md-1">
                         <h6>ХОРЕКА</h6>
                         <p class="footer-left">
-                            Встановлення кавових машин по містах: Харків, Київ, Біла Церква, Умань, Бровари, Бориспіль, Черкаси
+                            Встановлення кавових машин по містах: Харків, Київ, Біла Церква, Умань, Бровари, Бориспіль,
+                            Черкаси
                         </p>
                         <div class="row">
                             <div class="col col-auto col-md-6 footer-left">
