--- a/src/ru/chay_stakany.html
+++ b/src/ru/chay_stakany.html
@@ -17,6 +17,15 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-76167740-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-76167740-3');
+    </script>
     <!-- Facebook Pixel Code -->
     <script>
         !function (f, b, e, v, n, t, s) {
@@ -223,7 +232,7 @@
                                 <li><b>Большой<br>ассотртимент<br>вкусов</b></li>
                                 <br>
                                 <li><b>Объём стакана:<br></b>250 мл</li>
-                                
+
                                 <!-- <li><b>Фасовка:<br></b>пакет (25х2 г),<br>лист (250 г) </li> -->
                             </ul>
                         </figcaption>
@@ -232,7 +241,7 @@
                         <h3 class="text-center">Чай Bianchi в ассортименте и картонный фирменный стакан</h3>
                         <small>
                             <p class="lh-sm">Чай в пакетиках в индивидуальном конвертике.</p>
-                                <p class="lh-sm">Коллекция вкусов удовлетворит любой, даже самый взыскательный вкус!</p>
+                            <p class="lh-sm">Коллекция вкусов удовлетворит любой, даже самый взыскательный вкус!</p>
                         </small>
                     </div>
                 </div>
@@ -256,7 +265,8 @@
                         <small>
                             <p class="lh-sm">Золотые стаканы компании Bianchi Professional узнаваемы потребителем в
                                 многих городах Украины.</p>
-                            <p class="lh-sm">Стаканы изготавливаются из прочного качественного картона с применением наружной.
+                            <p class="lh-sm">Стаканы изготавливаются из прочного качественного картона с применением
+                                наружной.
                                 ламинации.</p>
                             <p class="lh-sm">В ассортименте представлены разные объемы.</p>
                         </small>
@@ -292,7 +302,7 @@
                     <div class="col-4 p-4 offset-md-1">
                         <h6>ХОРЕКА</h6>
                         <p class="footer-left">
-                           Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
+                            Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
                             Черкассы
                         </p>
                         <div class="row">
