--- a/src/ru/contacty.html
+++ b/src/ru/contacty.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Вы можете связаться с нами по e-mail, телефону или через форму обратной связи">
+    <meta name="description" content="Вы можете связаться с нами по e-mail, телефону или через форму обратной связи">
     <meta name="keywords"
         content="кофе, кофемашина в аренду, аренда, аренда кофеварки, прокат, кофемашина в прокат, кофеварка, кофеварка">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,12 +17,21 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-76167740-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-76167740-3');
+    </script>
     <!-- Facebook Pixel Code -->
     <script>
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -292,7 +300,8 @@
             <!-- /////////////////////////////////////////   Consultation    ////////////////////////////////////////     -->
             <div class="col p-5 m-3 mb-5 contacts fill">
                 <form class="needs-validation form-contacts" novalidate>
-                    <h4 class="green text-center"><b> Оставьте заявку и наш менеджер предложит вам лучшие условия сотрудничества</b>
+                    <h4 class="green text-center"><b> Оставьте заявку и наш менеджер предложит вам лучшие условия
+                            сотрудничества</b>
                     </h4>
                     <div class="container hr-line-contacts"></div>
                     <div class="mb-3">
@@ -338,7 +347,7 @@
                     <div class="col-4 p-4 offset-md-1">
                         <h6>ХОРЕКА</h6>
                         <p class="footer-left">
-                           Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
+                            Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
                             Черкассы
                         </p>
                         <div class="row">
