--- a/src/ru/vending_avtomaty.html
+++ b/src/ru/vending_avtomaty.html
@@ -16,12 +16,21 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-76167740-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-76167740-3');
+    </script>
     <!-- Facebook Pixel Code -->
     <script>
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -214,10 +223,11 @@
         <div class="row">
             <div class="col"></div>
             <div class="col-10">
-                <h5 class="text-center fw-bold"> <small>Современные вендинговые аппараты для продажи кофейных напитков и снеков.
-                    Клиент оплачивает и получает товар благодаря техническим приспособлениям без участия продавца.
-                    Устанавливаются в торговых и офисных центрах, на предприятиях, в учебных заведениях, АЗС
-                    и тому подобное.</small> </h5>
+                <h5 class="text-center fw-bold"> <small>Современные вендинговые аппараты для продажи кофейных напитков и
+                        снеков.
+                        Клиент оплачивает и получает товар благодаря техническим приспособлениям без участия продавца.
+                        Устанавливаются в торговых и офисных центрах, на предприятиях, в учебных заведениях, АЗС
+                        и тому подобное.</small> </h5>
                 <ul>
                     <small>
                         <li>
@@ -264,7 +274,8 @@
                             <p class="lh-sm">Автоматическая вендинг-машина на 30 напитков.</p>
                             <p class="lh-sm">Панель выбора с большими,
                                 интуитивными кнопками с подсветкой, оборудована инновационной технологией STT-Soft Touch
-                                Technology (технология легкого нажатия), распознающая человеческое прикосновение. Эта технология
+                                Technology (технология легкого нажатия), распознающая человеческое прикосновение. Эта
+                                технология
                                 применяется эксклюзивно в вендинг машинах Bianchi Industry. </p>
                             <p class="lh-sm">Возможность
                                 индивидуального выбора дозировки сахара.</p>
@@ -294,10 +305,12 @@
                     <div class="card-body">
                         <h3 class="text-center">Bianchi LEI 600 Smart</h3>
                         <small>
-                            <p class="lh-sm">Автоматическая вендинг-машина для приготовления горячих напитков вместимостью
+                            <p class="lh-sm">Автоматическая вендинг-машина для приготовления горячих напитков
+                                вместимостью
                                 600 чашек на 24 напитка с сенсорной панелью выбора напитков. </p>
                             <p class="lh-sm">Оборудованная системой
-                                автоматической регулировки помола кофе, что гарантирует высочайшее качество напитков.</p>
+                                автоматической регулировки помола кофе, что гарантирует высочайшее качество напитков.
+                            </p>
                         </small>
                     </div>
                 </div>
@@ -327,7 +340,8 @@
                             <p class="lh-sm">Вендинговый кофейный автомат вместимостью 600 чашек на 30 напитков с
                                 интерактивной сенсорной панелью выбора напитков. </p>
                             <p class="lh-sm">В меню аппарата входят несколько типов
-                                кофейных напитков на основе зернового кофе, шоколада, растворимых кофейных ингредиентов а также
+                                кофейных напитков на основе зернового кофе, шоколада, растворимых кофейных ингредиентов
+                                а также
                                 чай.</p>
                         </small>
                     </div>
@@ -357,7 +371,8 @@
                         <h3 class="text-center">Bianchi LEI 400</h3>
                         <small>
                             <p class="lh-sm">Автоматическая вендинг-машина на 11 напитков. Предназначена для установки в
-                                местах с наличием многочисленных клиентов, употребляющих кофе и напитки на его основе: офисных
+                                местах с наличием многочисленных клиентов, употребляющих кофе и напитки на его основе:
+                                офисных
                                 центрах, домах городской администрации, больших торговых залах, а также в админкорпусах
                                 крупных производственных объединений. </p>
                             <p class="lh-sm">Возможность индивидуального выбора дозировки сахара.</p>
@@ -426,8 +441,10 @@
                                 холодных напитков. </p>
                             <p class="lh-sm">Он имеет 24 кнопки прямого выбора напитков в стандартной и тактильной STT
                                 панели. </p>
-                            <p class="lh-sm">Увеличен бункер для зернового кофе и два контейнера для растворимого кофе.</p>
-                            <p class="lh-sm">Кофейный вендинговый автомат Bianchi Lei 500 предназначен для работы в местах со средней
+                            <p class="lh-sm">Увеличен бункер для зернового кофе и два контейнера для растворимого кофе.
+                            </p>
+                            <p class="lh-sm">Кофейный вендинговый автомат Bianchi Lei 500 предназначен для работы в
+                                местах со средней
                                 и большой проходимостью.</p>
                         </small>
                     </div>
@@ -494,10 +511,11 @@
                         <h3 class="text-center">Bianchi Vista M</h3>
                         <small>
                             <p class="lh-sm">Вендинг машина с охлаждением до 3° для продажи снеков, сэндвичей,
-                                свежие продукты, банок и бутылок. 
+                                свежие продукты, банок и бутылок.
                             <p class="lh-sm">Доступна в версии slave ("подчиненный"). </p>
                             <p class="lh-sm">Модель Slave:
-                                возможно комбинирование двух машин VISTA M с вендинг машиной для горячих напитков, с одной
+                                возможно комбинирование двух машин VISTA M с вендинг машиной для горячих напитков, с
+                                одной
                                 системой оплаты. </p>
                             <p class="lh-sm">Большое окно витрины с безопасным двойным стеклом, демонстрирующее ваши
                                 товары в наиболее выгодном свете. </p>
@@ -505,7 +523,7 @@
                             <p class="lh-sm">Регулируемая высота
                                 полок. </p>
                             <p class="lh-sm"></p>LED подсветка.
-                                Окно выдачи товаров с системой против воровства. </p>
+                            Окно выдачи товаров с системой против воровства. </p>
                         </small>
                     </div>
                 </div>
@@ -552,7 +570,7 @@
                     <div class="col-4 p-4 offset-md-1">
                         <h6>ХОРЕКА</h6>
                         <p class="footer-left">
-                           Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
+                            Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
                             Черкассы
                         </p>
                         <div class="row">
